lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:3: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	for(i <- 0 to getSol().length-2)
              ^